Add GET /rooms/{code} endpoint to documentation and remove debug log
